--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header>
       <div class="logo">
-        <img src="images/parametric-logo.png" alt="Parametric Solutions Logo">
+        <img src="parametric-logo.png" alt="Parametric Solutions Logo">
       </div>
       <nav>
         <ul class="nav-links">
