--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header>
       <div class="logo">
-        <img src="parametric-logo.png" alt="Parametric Solutions Logo">
+        <img src="images/parametric-logo.png" alt="Parametric Solutions Logo">
       </div>
       <nav>
         <ul class="nav-links">
@@ -23,9 +23,6 @@
           <li><a href="#">About</a></li>
           <li><a href="#">Courses</a></li>
         </ul>
-        <div class="menu-icon">
-          <i class="ri-menu-line"></i>
-        </div>
       </nav>
       
     </header>
@@ -51,11 +48,10 @@
     <h2>AutoCAD Course Syllabus</h2>
     <div class="carousel-container">
       <div class="carousel-track" id="carousel-track">
-        <!-- Cards will be injected here by script.js -->
-      </div>
+        </div>
       <div class="carousel-nav">
-        <button class="prev" id="prev">&#10094;</button>
-        <button class="next" id="next">&#10095;</button>
+        <button class="prev" id="prev">❮</button>
+        <button class="next" id="next">❯</button>
       </div>
     </div>
   </section>
@@ -72,6 +68,89 @@
       <div class="feature-card">Course Notes & Study Materials Provided</div>
     </div>
   </section>
+
+  <section class="gallery-section">
+    <h2>Our Students</h2>
+    <div class="gallery-grid">
+      <div class="gallery-item">
+        <img src="images/student1.jpg" alt="Student Project 1">
+      </div>
+      <div class="gallery-item">
+        <img src="images/student2.jpg" alt="Student Project 2">
+      </div>
+      <div class="gallery-item">
+        <img src="images/student3.jpg" alt="Student Project 3">
+      </div>
+      <div class="gallery-item">
+        <img src="images/autocad1.png" alt="Student Project 4">
+      </div>
+      </div>
+  </section>
+
+  <section class="testimonials-section">
+    <h2>What Our Students Say</h2>
+    <div class="testimonials-container">
+      <div class="testimonial-card">
+        <p>"I had an outstanding experience at Parametric Solution. The faculty members are highly knowledgeable and supportive, ensuring that every concept is well understood .  I highly recommend this institute to anyone looking to build a strong technical foundation and advance their career."</p>
+        <h4>- Wasiq Usmani</h4>
+      </div>
+      <div class="testimonial-card">
+        <p>"Parametric solutions pvt.ltd CAD/CAM class was very helpful and easy to follow. The instructor explained everything clearly, making complex topics easier to understand. The class included practical examples and hands-on practice, which made learning more engaging."</p>
+        <h4>- Vijay ballal</h4>
+      </div>
+      <div class="testimonial-card">
+        <p>"This AutoCAD class was an invaluable investment in my design skills.
+Vidhyadhaar Sir created a supportive learning environment, and I appreciate the expertise and enthusiasm shared throughout the course!!☺️"</p>
+        <h4>- Lavina Naik</h4>
+      </div>
+    </div>
+  </section>
+
+  <section class="youtube-video-section">
+  <h2>Students Feedback on YouTube</h2>
+  <div class="videos-grid-container">
+    <div class="video-wrapper">
+      <iframe
+        src="https://www.youtube.com/embed/Lujzxthv914?si=fcM7D0VnTFu9DFc7"
+        title="YouTube video player 1"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen>
+      </iframe>
+    </div>
+    <div class="video-wrapper">
+      <iframe
+        src="https://youtube.com/embed/J3em-7d7gHA?si=KYRp_2g8US-fvGbo"
+        title="YouTube video player 2"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen>
+      </iframe>
+    </div>
+    <div class="video-wrapper">
+      <iframe
+        src="https://youtube.com/embed/8JahAGpG7As?si=MqHfz4WYa1MYe5d-"
+        title="YouTube video player 3"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen>
+      </iframe>
+    </div>
+    <div class="video-wrapper">
+      <iframe
+        src="https://www.youtube.com/embed/85xDHEVbQUg?si=eZf6r3c1gKUntGDu"
+        title="YouTube video player 2"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen>
+      </iframe>
+    </div>
+    </div>
+</section>
   
   <section class="contact-section">
   <div class="contact-container">
