--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
     <h2>Our Students</h2>
     <div class="gallery-grid">
       <div class="gallery-item">
-        <img src="images/student1.jpg" alt="Student Project 1">
+        <img src="student1.jpg" alt="Student Project 1">
       </div>
       <div class="gallery-item">
-        <img src="images/student2.jpg" alt="Student Project 2">
+        <img src="student2.jpg" alt="Student Project 2">
       </div>
       <div class="gallery-item">
-        <img src="images/student3.jpg" alt="Student Project 3">
+        <img src="student3.jpg" alt="Student Project 3">
       </div>
       <div class="gallery-item">
-        <img src="images/autocad1.png" alt="Student Project 4">
+        <img src="autocad1.png" alt="Student Project 4">
       </div>
       </div>
   </section>
