--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
 
     <header>
       <div class="logo">
-        <img src="parametric-logo.png" alt="Parametric Solutions Logo">
+        <img src="images/parametric-logo.png" alt="Parametric Solutions Logo">
       </div>
       <nav>
         <ul class="nav-links">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Courses</a></li>
+          <li><a href="#home-section">Home</a></li>
+          <li><a href="#syllabus-section">Syllabus</a></li>
+          <li><a href="#contact-map-section">Contact</a></li>
         </ul>
       </nav>
       
     </header>
   
-    <section class="hero">
+    <section class="hero" id="home-section">
   <div class="hero-content">
     <h1>Master <span>AutoCAD</span> Skills</h1>
     <p>UNLOCK YOUR DESIGN POTENTIAL!</p>
@@ -44,7 +44,7 @@
   </form>
 </section>
 
-  <section class="syllabus-section">
+  <section class="syllabus-section" id="syllabus-section">
     <h2>AutoCAD Course Syllabus</h2>
     <div class="carousel-container">
       <div class="carousel-track" id="carousel-track">
@@ -73,16 +73,16 @@
     <h2>Our Students</h2>
     <div class="gallery-grid">
       <div class="gallery-item">
-        <img src="student1.jpg" alt="Student Project 1">
+        <img src="images/student1.jpg" alt="Student Project 1">
       </div>
       <div class="gallery-item">
-        <img src="student2.jpg" alt="Student Project 2">
+        <img src="images/student2.jpg" alt="Student Project 2">
       </div>
       <div class="gallery-item">
-        <img src="student3.jpg" alt="Student Project 3">
+        <img src="images/student3.jpg" alt="Student Project 3">
       </div>
       <div class="gallery-item">
-        <img src="autocad1.png" alt="Student Project 4">
+        <img src="images/autocad1.png" alt="Student Project 4">
       </div>
       </div>
   </section>
@@ -152,7 +152,7 @@ Vidhyadhaar Sir created a supportive learning environment, and I appreciate the 
     </div>
 </section>
   
-  <section class="contact-section">
+  <section class="contact-section" id="contact-map-section">
   <div class="contact-container">
     <div class="contact-map">
       <iframe 
