--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ Vidhyadhaar Sir created a supportive learning environment, and I appreciate the 
       <p>9819523008 / 022 254 081 63</p>
 
       <h4>Location</h4>
-      <p>Thane West</p>
+      <p>1st Floor, Takle Building, Raghoba Shankar Rd, beside S K Biryani Hotel, near Maze Granth Bhandar Book Depot, Juhu Chandan Society, Chendani, Thane West, Mumbai, Thane, Maharashtra 400601</p>
 
       <h4>Hours</h4>
       <div class="contact-hours">
